# await

./: LICENSE  await.cabal
cbits/: process.c
include/: hs.await.process.h
src/Control/Concurrent/: Await.hs  Event.hs
src/Control/Concurrent/Await/: Chan.hs  Fd.hs  OneShot.hs  Process.hs  Schedule.hsc  Service.hs  Socket.hs  Thread.hs
src/Control/Concurrent/STM/: Hooks.hs  Lifted.hs  Rollback.hs  TFuture.hs  TWaitQueue.hs
src/Control/Monad/STM/: Lifted.hs
src/Data/: Capability.hs  Inject.hs  Lift.hs  Peano.hs  Quantity.hs
src/Data/Heterogeneous/: List.hs
src/Internal/: Control.hs
src/Type/: Eq.hs
tests/: ProcessTests.hs
