Name: await
Version: 0.1
Category: Control, Concurrent
Stability: experimental
Synopsis: Asynchronous I/O without twisting your code
Description:
  TODO

Author: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Maintainer: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Copyright: 2018 Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
License: BSD3
License-File: LICENSE

Cabal-Version: >= 1.10.0
Build-Type: Simple

Extra-Source-Files: include/hs.await.process.h

Library
  Default-Language: Haskell2010
  Build-Depends: base               >= 4 && < 5
               , ghc-prim           >= 0.2
               , template-haskell
               , pointed            >= 3.0
               , contravariant      >= 0.4
               , constraints        >= 0.2
               , bifunctors         >= 3.0
               , free               >= 3.0
               , deepseq            >= 1.2
               , containers         >= 0.4
               , stm                >= 2.2
               , transformers       >= 0.2
               , monad-control      >= 1.0
               , transformers-base  >= 0.4
               , transformers-abort >= 0.4
               , mtl                >= 2.0
               , monad-finally      >= 0.1
               , monad-abort-fd     >= 0.4
               , unix               >= 2.4
               , posix-timer        >= 0.3
               , posix-socket       >= 0.2
               , bytestring         >= 0.10
               , data-flags         >= 0.0.3
               , data-timeout       >= 0.3
  Hs-Source-Dirs: src
  Include-Dirs: include
  GHC-Options: -Wall
  Exposed-Modules:
    Data.Inject
    Data.Capability
    Data.Peano
    Data.Heterogeneous.List
    Control.Concurrent.Event
    Control.Monad.STM.Lifted
    Control.Concurrent.STM.Lifted
    Control.Concurrent.STM.Rollback
    Control.Concurrent.STM.Hooks
    Control.Concurrent.STM.TWaitQueue
    Control.Concurrent.STM.TFuture
    Control.Concurrent.Await
    Control.Concurrent.Await.OneShot
    Control.Concurrent.Await.Chan
    Control.Concurrent.Await.Service
    Control.Concurrent.Await.Schedule
    Control.Concurrent.Await.Thread
    Control.Concurrent.Await.Fd
    Control.Concurrent.Await.Socket
    Control.Concurrent.Await.Process
  Other-Modules:
    Internal.Control
  C-Sources:
    cbits/process.c

Test-Suite process-tests
  Default-Language: Haskell2010
  Type: exitcode-stdio-1.0
  Build-Depends: base                 >= 4 && < 5
               , bytestring           >= 0.9.2
               , test-framework       >= 0.4.1
               , test-framework-hunit >= 0.2.6
               , HUnit                >= 1.2.2
               , unix                 >= 2.4
               , await
  Hs-Source-Dirs: tests
  GHC-Options: -Wall -fno-warn-missing-signatures -threaded
  Main-is: ProcessTests.hs

